4568713181927b8a7ff3bcf160089c79cf32d0d4 Dev: Fix text alignment when in a narrow window Dev: Fix Semantic UI integration - wasn't applying a lot of the custom styles
Sync to source repo @4568713181927b8a7ff3bcf160089c79cf32d0d4

--- a/css/dataTables.foundation.css
+++ b/css/dataTables.foundation.css
@@ -389,10 +389,10 @@ div.dt-container div.dt-layout-table > div {
   }
 }
 @media screen and (max-width: 767px) {
-  div.dt-container > div.grid-x {
+  div.dt-container > div.grid-x:not(.dt-layout-table) {
     margin-bottom: 0 !important;
   }
-  div.dt-container > div.grid-x > div.flex-container {
+  div.dt-container > div.grid-x:not(.dt-layout-table) > div.flex-container {
     display: block !important;
     text-align: center;
     margin: 5px auto;
